# Simulation_Ros_Niryo_One

./: .gitignore  README.md
niryo_one_description/launch/: display.launch  display2.launch
niryo_one_description/src/: joint.py  joystick_ikine  test_fkine  test_gazebo  test_ikine
niryo_one_gazebo/: CMakeLists.txt  package.xml
niryo_one_gazebo/config/: arm_controller.yaml  niryo_one_controllers.yaml  niryo_one_controllers2.yaml
niryo_one_gazebo/launch/: controller_utils.launch  niryo_one_control2.launch  niryo_one_world 2.launch  niryo_one_world.launch
niryo_one_gazebo/src/: Movimiento.py  PickPlace.py  cambio.py  cambio2.py  funciones.py  joint.py  joystick_Gazebo  markers.py  test_gazebo  test_gazebo2
niryo_one_gazebo/urdf/: bin.urdf  conveyor_belt.urdf  red_box.urdf
